# echos

./: Cargo.toml  README.md
.cargo/: config.toml
root/: info.txt  kernel.txt
root/kconfig/: terminal.toml
root/programs/: seash.txt
src/: gdt.rs  interrupts.rs  kernel_state.rs  lib.rs  main.rs
src/arch/x86_64/: cpuid.rs
src/kdrivers/: mod.rs  serial.rs  vga_buffer.rs
src/kdrivers/kvga/: mod.rs  vga_g.rs
src/kdrivers/vga/: mod.rs
src/librust/: mod.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
