[package]
name = "aura_os"
version = "0.1.0"
authors = ["Able <abl3theabove@gmail.com>"]
edition = "2018"
[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"
vga="*"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
